--- a/doc-aggregator-service/src/main/resources/templates/admin/docs.html
+++ b/doc-aggregator-service/src/main/resources/templates/admin/docs.html
@@ -1,20 +1,10 @@
-<html lang="en"><!--/* TODO: Common page template, make documentation removable */-->
-<head>
-    <title>Documentation Aggregator</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS from WebJars -->
-    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
+<html lang="en" th:replace="~{page :: page ('Documentation Aggregator', ~{ :: .container})}">
 <body>
-<div class="container mt-4">
+<div class="container mt-4"><!--/* TODO: make documentation removable */-->
     <header class="mb-5">
         <h1 class="display-4 text-primary">Documentation Management</h1>
         <p class="lead">List and manage available documentation</p>
     </header>
-
     <div class="row">
         <div class="col-12">
             <!--/*@thymesVar id="docs" type="java.util.List"*/-->
@@ -34,10 +24,5 @@
         </div>
     </div>
 </div>
-
-<!-- Bootstrap Bundle with Popper from WebJars -->
-<script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
-<!-- Bootstrap Icons from WebJars -->
-<link th:href="@{/webjars/bootstrap-icons/font/bootstrap-icons.css}" rel="stylesheet">
 </body>
 </html>
